cmake_minimum_required(VERSION 3.0.2)
project(add_markers)


find_package(catkin REQUIRED COMPONENTS
  roscpp
  visualization_msgs
)



catkin_package(
  INCLUDE_DIRS include
  LIBRARIES add_markers
  CATKIN_DEPENDS roscpp visualization_msgs
  DEPENDS system_lib
)


include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)



add_executable(add_markers src/add_markers.cpp)
target_link_libraries(add_markers ${catkin_LIBRARIES})

add_executable(test_add_markers src/test_add_markers.cpp)
target_link_libraries(test_add_markers ${catkin_LIBRARIES})
